Fix stashing not working

We need to do stashing in the saveSessionTo after it has deleted
old KConfigGroup entries. If we do it before, we end up deleting
the stash entries we just created.

Also add a test to make sure the feature is always working at a
basic level at least.

BUG: 505135